2003-01-25  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/snippet/browse.php: remove extra line feed at top of file,
	fix bug #185.

2003-01-25  Reinhard Spisser   <reinhard@spisser.it>

	* www/pm/reporting/index.php,
	www/include/tool_reports.php, www/pm/admin/index.php,
	common/pm/*, www/include/html.php, www/include/Layout.class,
	www/include/html.php, www/source.php
	Localization

2003-01-24  Reinhard Spisser   <reinhard@spisser.it>

	* www/404.php, www/sendmessage.php, www/users,
	www/include/user_home,php, www/include/exit.php,
	common/docman/Document.class,
	common/docman/DocumentGroup.class,
	common/frs/FRSFile.class, common/frs/FRSRelease.class
	common/frs/FRSPackage.class,
	www/project/filemodule_monitor.php, www/project/memberlist.php
	Localization

	* www/pm/index.php, www/pm/browse_task.php, www/pm/add_task.php,
	www/pm/mod_task.php, www/include/ProjectGroupHTML.class,
	www/pm/include/ProjectTaskHTML.class, www/pm/task.php,
	www/pm/ganttpage.php:
	Localization


	* www/project/showfiles.php: removed unused code, Localization

	* common/include/Error.class: new setMissingParamsError()


2003-01-24  Michael Jennings  <mej@eterm.org>

	* gforge.spec:  New spec file for GForge.  This is, of course,
	still very much beta.

2003-01-22  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/include/languages/Spanish.tab: more translations, sorted the
	file to more easily find strings, spell check again.

	* www/project/admin/editrelease.php: what happens when no
	file is uploaded seems to be browser specific (?)... catch
	more cases.

2003-01-21  Ryan T. Sammartino  <ryants@shaw.ca>
	    Kenia L. Sammartino  <kenia@shaw.ca>

	* www/include/languages/Spanish.tab: thorough review of all
	strings; tu --> usted, many spelling mistakes fixed, proper
	XHTML tags.

2003-01-21  Reinhard Spisser   <reinhard@spisser.it>

	* www/include/project_home.php: removed obsolete foundry stuff
	Localization

	* common/include/utils.php: Localization
