@@ -1,5 +1,8 @@
 2003-01-25  Ryan T. Sammartino  <ryants@shaw.ca>
 
+	* cronjobs/mail/mailing_lists_create.php: lowercase all list names,
+	do not call "add_alias.php".
+
 	* www/snippet/browse.php: remove extra line feed at top of file,
 	fix bug #185.
 
